--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.1.0
+  fluttertoast: ^8.2.2
+  another_flushbar: ^1.12.30
 
 dev_dependencies:
   flutter_test:
