--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   fluttertoast: ^8.2.2
   another_flushbar: ^1.12.30
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
